--- a/index.html
+++ b/index.html
@@ -1,31 +1,107 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap" rel="stylesheet">
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap" rel="stylesheet">
 
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <title>Creo Worship Visualized</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body class="bg-light">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>Creo Worship Visualized</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
 
-        <!--Main content container-->
-        <div class="container-fluid my-container h-100">
-            <h1 class="half-background">Creo Worship Visualized</h1>
-        </div> <!--end of container-->
+  <body class="bg-light">
+    <div id="top-title">
+      <h1 class="half-background">Creo Worship Visualized</h1>
+      <h3>Songs, artists, and stats of Creo Worship since 2017</h3>
+    </div>
 
-        <!-- Utils: d3, jquery, etc. -->
-        <script src="https://d3js.org/d3.v5.min.js"></script>
+    <div class="container" id="container-1">
+      <div id="songs-chart" class="chart"></div>
+      <div class="sections">
+        <div>
+          <h3>TOP 10 SONGS OF ALL TIME</h3>
+          <h5>(by number of plays)</h5>
+          <span class="body-text">Description</span> 
+        </div>
 
-        <!--Bootstrap javascript-->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <div>
+          <h3>TOP 10 SONGS BY EVENT</h3>
+          <h5>EXP NGHT</h5>
+          <span class="body-text">Description</span> 
+        </div>
 
-        <!-- Project files -->
-        <script src="js/main.js"></script>
-    </body>
+        <div>
+          <h5>YA Worship</h5>
+          <span class="body-text">Description</span> 
+        </div>
+
+        <div>
+          <h5>Summary</h5>
+          <span class="body-text">.</span> 
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container" id="container-2">
+      <div id="chart-2" class="chart"></div>
+
+      <div class="sections">
+        <div>
+          <h3>TOP 5 ARTISTS OF ALL TIME</h3>
+          <h5>By total number of plays</h5>
+          <span class="body-text"></span>
+        </div>
+
+        <div>
+          <h5>By number of unique songs played</h5>
+          <span class="body-text"></span>
+        </div>
+
+        <div>
+          <h5>Summary</h5>
+          <span class="body-text">.</span> 
+        </div>
+        
+      </div>
+    </div>
+
+    <div class="container" id="container-3">
+      <div id="chart-3" class="chart"></div>
+
+      <div class="sections">
+        <div>
+          <h3>THE BAND</h3>
+          <h5>Who plays what, when?</h5>
+          <span class="body-text"></span>
+        </div>
+      </div>
+    </div>
+
+    <div class="container" id="container-4">
+      <div id="chart-4" class="chart"></div>
+
+      <div class="sections">
+        <div>
+          <h3>THE TOTALS</h3>
+          <span class="body-text"></span>
+        </div>
+      </div>
+    </div>
+
+  <h3 id="source"><a href="https://github.com/1wheel/graph-scroll">Based on graph-scroll by Adam Pearce</a></h3>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.js"></script>
+  <!-- <script src="assets/d3v4+jetpack.js"></script> -->
+  <script src="assets/graph-scroll.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+
+  <script src="js/chart.js"></script>
+  <script src="js/songsChart.js"></script>
+  <script src="js/artistsChart.js"></script>
+  <script src="js/dataObject.js"></script>
+  <script src="js/main.js"></script>
+  </body>
 </html>
