Renders song data for main events

--- a/index.html
+++ b/index.html
@@ -22,19 +22,31 @@
       <div class="sections">
         <div>
           <h3>TOP 10 SONGS OF ALL TIME</h3>
-          <h5>(by number of plays)</h5>
-          <span class="body-text">Description</span> 
+          <h5>(by number of times sung)</h5>
+          <span class="body-text">
+            "Build My Life" by Housefires comes out on top: we've sung it 24 times since September 2017!  "Glorious Day" from Passion isn't far behind with 21 plays.  "Spirit Move" by Bethel rounds out the top 3 with 18 plays.
+            <br><br>
+            "Good Grace" from Hillsong UNITED manages to crack the top ten with 11 plays - an impressive number given that it's the most recent song on this list: it was released in 2019!
+          </span> 
         </div>
 
         <div>
           <h3>TOP 10 SONGS BY EVENT</h3>
           <h5>EXP NGHT</h5>
-          <span class="body-text">Description</span> 
+          <span class="body-text">
+            Even since EXP NGHT started up in 2018, it's been bringing all the hype with songs like "This is Living", "Wake", and "Real Love" by Hillsong Young & Free.
+            <br><br>
+            That isn't to say we don't have our quieter and contemplative moments, though!  Songs like "Spirit Move" and "Reckless Love" are also clear favourites.
+          </span> 
         </div>
 
         <div>
           <h5>YA Worship</h5>
-          <span class="body-text">Description</span> 
+          <span class="body-text">
+            YA Worship nights tnd to be a bit more on the chill side, compared to EXP NGHT.
+            <br><br>
+            Once again, "Good Grace" has strong representation when it comes to being sung at YA Worship nights with 8 plays in total.  "Build My Life" is a steadfast favourite, coming in with 7 plays, right behind our top song.
+          </span> 
         </div>
 
         <div>
