Add final option to select event

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div>
           <h3>TOP 10 SONGS BY EVENT</h3>
-          <h5>EXP NGHT</h5>
+          <h5>EXP NGHT (2018 - Present)</h5>
           <span class="body-text">
             Even since EXP NGHT started up in 2018, it's been bringing all the hype with songs like "This is Living", "Wake", and "Real Love" by Hillsong Young & Free.
             <br><br>
@@ -41,7 +41,7 @@
         </div>
 
         <div>
-          <h5>YA Worship</h5>
+          <h5>YA Worship (2018 - Present)</h5>
           <span class="body-text">
             YA Worship nights tnd to be a bit more on the chill side, compared to EXP NGHT.
             <br><br>
@@ -50,9 +50,66 @@
         </div>
 
         <div>
+          <h5>Choose your own event!</h5>
+          <span class="body-text">Click on the choices below to see the most popular songs by event.</span>
+          <br><br>
+          <form action="" id="form-event-selector">
+            <p>
+              <label class="radio-button">
+                <input type="radio" name="event-selector" value="all" checked>
+                <span class="checkmark"></span>
+                <span> All events</span>
+              </label>
+            </p>
+            <p>
+              <label class="radio-button">
+                <input type="radio" name="event-selector" value="exp_nght">
+                <span class="checkmark"></span>
+                <span> EXP NGHT (since 2018)</span>
+              </label>
+            </p>
+            <p>
+              <label class="radio-button">
+                <input type="radio" name="event-selector" value="ya_worship">
+                <span class="checkmark"></span>
+                <span> YA Worship (since 2018)</span>
+              </label>
+            </p>
+            <p>
+              <label class="radio-button">
+                <input type="radio" name="event-selector" value="worship_wednesday">
+                <span class="checkmark"></span>
+                <span> Worship Wednesday (2020)</span>
+              </label>
+            </p>
+            <p>
+              <label class="radio-button">
+                <input type="radio" name="event-selector" value="creo_monday">
+                <span class="checkmark"></span>
+                <span> Creo Monday (2017-2018)</span>
+              </label>
+            </p>
+            <p>
+              <label class="radio-button">
+                <input type="radio" name="event-selector" value="creo_friday">
+                <span class="checkmark"></span>
+                <span> Creo Friday (2017-2018)</span>
+              </label>
+            </p>
+            <p>
+              <label class="radio-button">
+                <input type="radio" name="event-selector" value="camp">
+                <span class="checkmark"></span>
+                <span> Creo Camp</span>
+              </label>
+            </p>
+          </form>
+        </div>
+<!-- 
+        <div>
           <h5>Summary</h5>
           <span class="body-text">.</span> 
-        </div>
+        </div> -->
 
       </div>
     </div>
@@ -109,6 +166,8 @@
   <!-- <script src="assets/d3v4+jetpack.js"></script> -->
   <script src="assets/graph-scroll.js"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> 
+
 
   <script src="js/chart.js"></script>
   <script src="js/songsChart.js"></script>
