Typos fixed, part of README updated

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3>TOP 10 SONGS BY EVENT</h3>
           <h5>EXP NGHT (2018 - Present)</h5>
           <span class="body-text">
-            Even since EXP NGHT started up in 2018, it's been bringing all the hype with songs like "This is Living", "Wake", and "Real Love" by Hillsong Young & Free.
+            Ever since EXP NGHT started up in 2018, it's been bringing <em>all the hype</em> with songs like "This is Living", "Wake", and "Real Love" by Hillsong Young & Free.
             <br><br>
             That isn't to say we don't have our quieter and contemplative moments, though!  Songs like "Spirit Move" and "Reckless Love" are also clear favourites.
           </span> 
@@ -43,7 +43,7 @@
         <div>
           <h5>YA Worship (2018 - Present)</h5>
           <span class="body-text">
-            YA Worship nights tnd to be a bit more on the chill side, compared to EXP NGHT.
+            YA Worship nights tend to be a bit more on the chill side, compared to EXP NGHT.
             <br><br>
             Once again, "Good Grace" has strong representation when it comes to being sung at YA Worship nights with 8 plays in total.  "Build My Life" is a steadfast favourite, coming in with 7 plays, right behind our top song.
           </span> 
@@ -58,7 +58,7 @@
               <label class="radio-button">
                 <input type="radio" name="event-selector" value="all" checked>
                 <span class="checkmark"></span>
-                <span> All events</span>
+                <span> All events*</span>
               </label>
             </p>
             <p>
@@ -104,12 +104,8 @@
               </label>
             </p>
           </form>
+          <span class="body-text">* Numbers account for spontaneous songs or songs that were cut or changed last-minute.  But one-off events like Team Night, Family Ministries Conference, and Cambodia, are included in "All events".</span>
         </div>
-<!-- 
-        <div>
-          <h5>Summary</h5>
-          <span class="body-text">.</span> 
-        </div> -->
 
       </div>
     </div>
