--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </label>
             </p>
           </form>
-          <span class="body-text">* Numbers account for spontaneous songs or songs that were cut or changed last-minute.  But one-off events like Team Night, Family Ministries Conference, and Cambodia, are included in "All events".</span>
+          <span class="body-text">* Numbers do not account for spontaneous songs or songs that were cut or changed last-minute.  But one-off events like Team Night, Family Ministries Conference, and Cambodia, are included in "All events".</span>
         </div>
 
       </div>
