Typos in HTML and update README

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div>
-          <h5>Choose your own event!</h5>
+          <h5>Choose an event!</h5>
           <span class="body-text">Click on the choices below to see the most popular songs by event.</span>
           <br><br>
           <form action="" id="form-event-selector">
