Artists chart done

--- a/index.html
+++ b/index.html
@@ -111,23 +111,30 @@
     </div>
 
     <div class="container" id="container-2">
-      <div id="chart-2" class="chart"></div>
+      <div id="artists-chart" class="chart"></div>
 
       <div class="sections">
         <div>
           <h3>TOP 5 ARTISTS OF ALL TIME</h3>
           <h5>By total number of plays</h5>
-          <span class="body-text"></span>
+          <span class="body-text">
+            We've sung Bethel songs a lot at Creo.  "Spirit Move", "King of My Heart", "No Longer Slaves", and "We Will Not Be Shaken" are popular go-tos for worship sets.
+            <br><br>
+            Perhaps not surprisingly, we also really like Hillsong, Hillsong, and Hillsong.  We've done a lot of music from three different iterations of the bands, and cover them all pretty equally: we've sung their songs about 50 times each.
+            <br><br>
+            Rounding out the top five is Housefires: the status of "Build My Life" as Creo's #1 song of all time certainly helps bring that number up!
+          </span>
         </div>
 
         <div>
-          <h5>By number of unique songs played</h5>
-          <span class="body-text"></span>
-        </div>
-
-        <div>
-          <h5>Summary</h5>
-          <span class="body-text">.</span> 
+          <h5>By number of unique songs sung</h5>
+          <span class="body-text">
+            This chart shows the number of <em>different</em> songs we've sung by each artist.
+            <br><br>
+            With their large catalog of familiar worship songs, the three main Hillsong bands (Worship, UNITED, and Young & Free) all manage to crack the top five once again.
+            <br><br>
+            Bethel's right in the mix with 14 different songs sung, and Elevation rounds out the top five with 10 songs, the same number as Young & Free.
+          </span>
         </div>
         
       </div>
