Foundations present for totals chart

--- a/index.html
+++ b/index.html
@@ -153,12 +153,55 @@
     </div>
 
     <div class="container" id="container-4">
-      <div id="chart-4" class="chart"></div>
+      <div id="totals-chart" class="chart"></div>
 
       <div class="sections">
         <div>
           <h3>THE TOTALS</h3>
-          <span class="body-text"></span>
+          <span class="body-text"><h5>The Songs</h5></span>
+        </div>
+
+        <div>
+          <span class="body-text"><h5>The Artists</h5></span>
+        </div>
+
+        <div>
+          <span class="body-text"><h5>The Worship Team</h5></span>
+        </div>
+
+        <div>
+          <span class="body-text"><h5>The Sets</h5></span>
+        </div>
+
+        <div>
+          <h5>The Guests</h5>
+          <span class="body-text">
+            To date, the following groups have come to guest lead for Creo Worship:
+            <ul>
+              <li>
+                <a href="https://humilityandhunger.com/" target="_blank">
+                  Humility & Hunger
+                </a>
+              </li>
+              <li>
+                <a href="https://pacificlife.edu/paclifeworship/" target="_blank">
+                  Paclife Worship
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/colindavidjamesyen/" target="_blank">
+                  Colin Yen
+                </a>
+              </li>
+            </ul>
+          </span>
+        </div>
+
+        <div>
+          <h5>Everything</h5>
+          <span class="body-text">
+            Creo Worship has done a whole lot of worship through music since 2017!  
+          </span>
         </div>
       </div>
     </div>
@@ -175,6 +218,8 @@
   <script src="js/chart.js"></script>
   <script src="js/songsChart.js"></script>
   <script src="js/artistsChart.js"></script>
+  <!-- <script src="js/bandChart.js"></script> -->
+  <script src="js/totalsChart.js"></script>
   <script src="js/dataObject.js"></script>
   <script src="js/main.js"></script>
   </body>
