--- a/index.html
+++ b/index.html
@@ -158,19 +158,37 @@
       <div class="sections">
         <div>
           <h3>THE TOTALS</h3>
-          <span class="body-text"><h5>The Songs</h5></span>
+          <h5>The Songs</h5>
+          <span class="body-text">
+            Creo Worship has played over 130 different songs over the past three years.
+          </span>
         </div>
 
         <div>
-          <span class="body-text"><h5>The Artists</h5></span>
+          <span class="body-text">
+            Counting all the repeats, that means that we've sung songs over 500 times since 2017!
+          </span>
         </div>
 
         <div>
-          <span class="body-text"><h5>The Worship Team</h5></span>
+          <h5>The Artists</h5>
+          <span class="body-text">
+            We've played music from over thirty different artists, including some original songs by Creo Worship!
+          </span>
         </div>
 
         <div>
-          <span class="body-text"><h5>The Sets</h5></span>
+          <h5>The Worship Team</h5>
+          <span class="body-text">
+            Over thirty different people have been a part of Creo worship.
+          </span>
+        </div>
+
+        <div>
+          <h5>The Sets</h5>
+          <span class="body-text">
+            Over 100 worship sets have been created by Creo Worship for regular worship nights and special events like Cambodia or Team Night.
+          </span>
         </div>
 
         <div>
@@ -200,13 +218,19 @@
         <div>
           <h5>Everything</h5>
           <span class="body-text">
-            Creo Worship has done a whole lot of worship through music since 2017!  
+            Creo Worship has done a whole lot of worship through music since 2017!
+            <br><br>
+            Check out some of our live Worship Wednesday sets on <a href="https://www.youtube.com/channel/UCHLJSWx1PmSatItsPczZX3Q" target="_blank">YouTube</a> and a collection of our past worship sets on <a href="https://open.spotify.com/user/creopeople">Spotify</a>.
           </span>
         </div>
       </div>
     </div>
 
-  <h3 id="source"><a href="https://github.com/1wheel/graph-scroll">Based on graph-scroll by Adam Pearce</a></h3>
+    <div id="bottom-text" class="container">
+      <div>A project by Jordan Chiu.  <a href="https://github.com/jordanmchiu/creo-worship-visualized" target="_blank">Dev Diary</a></div>
+      <div>Based on <a href="https://github.com/1wheel/graph-scroll">graph-scroll</a> by Adam Pearce</div>
+    </div>
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.js"></script>
   <!-- <script src="assets/d3v4+jetpack.js"></script> -->
