Renders donut charts where they should be

--- a/index.html
+++ b/index.html
@@ -141,13 +141,18 @@
     </div>
 
     <div class="container" id="container-3">
-      <div id="chart-3" class="chart"></div>
+      <div id="band-chart" class="chart"></div>
 
       <div class="sections">
         <div>
           <h3>THE BAND</h3>
           <h5>Who plays what, when?</h5>
-          <span class="body-text"></span>
+          <span class="body-text">Lots of vocalists.</span>
+        </div>
+
+        <div>
+          <h3>Spacer</h3>
+          <span class="body-text">Spacer.</span>
         </div>
       </div>
     </div>
@@ -242,7 +247,7 @@
   <script src="js/chart.js"></script>
   <script src="js/songsChart.js"></script>
   <script src="js/artistsChart.js"></script>
-  <!-- <script src="js/bandChart.js"></script> -->
+  <script src="js/bandChart.js"></script>
   <script src="js/totalsChart.js"></script>
   <script src="js/dataObject.js"></script>
   <script src="js/main.js"></script>
