Renders text inside donut charts for band

--- a/index.html
+++ b/index.html
@@ -149,10 +149,9 @@
           <h5>Who plays what, when?</h5>
           <span class="body-text">Lots of vocalists.</span>
         </div>
-
         <div>
-          <h3>Spacer</h3>
-          <span class="body-text">Spacer.</span>
+          <h5>Spacer</h5>
+          <span class="body-text">Spacer</span>
         </div>
       </div>
     </div>
@@ -238,7 +237,6 @@
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.js"></script>
-  <!-- <script src="assets/d3v4+jetpack.js"></script> -->
   <script src="assets/graph-scroll.js"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> 
