Text and icons are displayed at the centre of each donut chart

--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
         <div>
           <h3>THE BAND</h3>
           <h5>Who plays what, when?</h5>
-          <span class="body-text">Lots of vocalists.</span>
-        </div>
-        <div>
-          <h5>Spacer</h5>
-          <span class="body-text">Spacer</span>
+          <span class="body-text">
+            It can be difficult to have worship without a worship leader, so it's not surpsising that we've had a leader at 100% of our worship events.  We almost always also have backing vocals, acoustic guitar, keys, drums, and bass as well.
+            <br><br>
+            Over three-quarters of our worship sets have someone shredding on the electric!  Less common instruments include strings (cello and violin for more acoustic worship nights) and ukulele, which was popular for Creo Fridays before EXP NGHT started up.
+          </span>
         </div>
       </div>
     </div>
@@ -232,6 +232,7 @@
 
     <div id="bottom-text" class="container">
       <div>A project by Jordan Chiu.  <a href="https://github.com/jordanmchiu/creo-worship-visualized" target="_blank">Dev Diary</a></div>
+      <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
       <div>Based on <a href="https://github.com/1wheel/graph-scroll">graph-scroll</a> by Adam Pearce</div>
     </div>
 
