--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <h3>THE BAND</h3>
           <h5>Who plays what, when?</h5>
           <span class="body-text">
-            It can be difficult to have worship without a worship leader, so it's not surpsising that we've had a leader at 100% of our worship events.  We almost always also have backing vocals, acoustic guitar, keys, drums, and bass as well.
+            It can be difficult to have worship without a worship leader, so it's not surpsising that we've had a leader at 100% of our worship events.  We almost always also have backing vocals, acoustic guitar, keys, drums, and bass as well: about 90% of our worship events have these band members.
             <br><br>
             Over three-quarters of our worship sets have someone shredding on the electric!  Less common instruments include strings (cello and violin for more acoustic worship nights) and ukulele, which was popular for Creo Fridays before EXP NGHT started up.
           </span>
