Remove unused files, add favicon, update readme

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164896454-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-164896454-1');
+    </script>
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap" rel="stylesheet">
 
     <!-- Required meta tags -->
@@ -8,7 +19,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Creo Worship Visualized</title>
+
+    <!-- OPTIONAL: description -->
+    <meta name="description" content="Creo Worship Visualized">
+    <!-- OPTIONAL: author -->
+    <meta name="author" content="Jordan Chiu">
+    <meta name="copyright" content="Jordan Chiu 2020">
+    <!-- <meta property="og:image" content="https://raw.githubusercontent.com/creoworship/creoworship.github.io/master/assets/images/site-preview.PNG"> -->
+    <meta property="og:site_name" content="Creo Worship Visualized">
+    <meta property="og:title" content="Creo Worship Visualized">
+    <meta property="og:url" content="https://jordanmchiu.github.io/creo-worship-visualized/">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Creo Worship Visualized">
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#000000">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#000000">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/radio-button.css">
+    <link rel="stylesheet" href="css/graph-scroll.css">
   </head>
 
   <body class="bg-light">
@@ -146,9 +184,11 @@
       <div class="sections">
         <div>
           <h3>THE BAND</h3>
-          <h5>Who plays what, when?</h5>
+          <h5>How often do we have each instrument?</h5>
           <span class="body-text">
-            It can be difficult to have worship without a worship leader, so it's not surpsising that we've had a leader at 100% of our worship events.  We almost always also have backing vocals, acoustic guitar, keys, drums, and bass as well: about 90% of our worship events have these band members.
+            It can be difficult (but not impossible!) to have worship without a worship leader, so it's not surpsising that we've had a leader at 100% of our worship events.
+            <br><br>
+            We almost always also have backing vocals, acoustic guitar, keys, drums, and bass as well: about 90% of our worship events have these band members.
             <br><br>
             Over three-quarters of our worship sets have someone shredding on the electric!  Less common instruments include strings (cello and violin for more acoustic worship nights) and ukulele, which was popular for Creo Fridays before EXP NGHT started up.
           </span>
