Add preview image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- OPTIONAL: author -->
     <meta name="author" content="Jordan Chiu">
     <meta name="copyright" content="Jordan Chiu 2020">
-    <!-- <meta property="og:image" content="https://raw.githubusercontent.com/creoworship/creoworship.github.io/master/assets/images/site-preview.PNG"> -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/jordanmchiu/creo-worship-visualized/master/assets/site-preview.PNG">
     <meta property="og:site_name" content="Creo Worship Visualized">
     <meta property="og:title" content="Creo Worship Visualized">
     <meta property="og:url" content="https://jordanmchiu.github.io/creo-worship-visualized/">
@@ -224,7 +224,7 @@
         <div>
           <h5>The Worship Team</h5>
           <span class="body-text">
-            Over thirty different people have been a part of Creo worship.
+            Over thirty different people have been a part of Creo Worship.
           </span>
         </div>
 
