Feedback from EY

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="sections">
         <div>
           <h3>TOP 10 SONGS OF ALL TIME</h3>
-          <h5>(by number of times sung)</h5>
+          <h5>By number of times sung</h5>
           <span class="body-text">
             "Build My Life" by Housefires comes out on top: we've sung it 24 times since September 2017!  "Glorious Day" from Passion isn't far behind with 21 plays.  "Spirit Move" by Bethel rounds out the top 3 with 18 plays.
             <br><br>
@@ -204,13 +204,13 @@
           <h3>THE TOTALS</h3>
           <h5>The Songs</h5>
           <span class="body-text">
-            Creo Worship has played over 130 different songs over the past three years.
+            Counting all the repeats, that we've sung songs over 500 times since 2017!
           </span>
         </div>
 
         <div>
           <span class="body-text">
-            Counting all the repeats, that means that we've sung songs over 500 times since 2017!
+            We've also played over 130 different songs over the past three years.
           </span>
         </div>
 
