Edit og description

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta property="og:title" content="Creo Worship Visualized">
     <meta property="og:url" content="https://jordanmchiu.github.io/creo-worship-visualized/">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Creo Worship Visualized">
+    <meta property="og:description" content="Songs, artists, and stats of Creo Worship since 2017">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
