Minor touch-ups

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
   </head>
 
   <body class="bg-light">
+
     <div id="top-title">
       <h1 class="half-background">Creo Worship Visualized</h1>
       <h3>Songs, artists, and stats of Creo Worship since 2017</h3>
+      <h5>Scroll down to see more!</h5>
     </div>
 
     <div class="container" id="container-1">
@@ -148,6 +150,8 @@
       </div>
     </div>
 
+    <hr>
+
     <div class="container" id="container-2">
       <div id="artists-chart" class="chart"></div>
 
@@ -178,6 +182,8 @@
       </div>
     </div>
 
+    <hr>
+
     <div class="container" id="container-3">
       <div id="band-chart" class="chart"></div>
 
@@ -196,6 +202,8 @@
       </div>
     </div>
 
+    <hr>
+
     <div class="container" id="container-4">
       <div id="totals-chart" class="chart"></div>
 
@@ -204,7 +212,7 @@
           <h3>THE TOTALS</h3>
           <h5>The Songs</h5>
           <span class="body-text">
-            Counting all the repeats, that we've sung songs over 500 times since 2017!
+            Counting all the repeats, we've sung songs over 500 times since 2017!
           </span>
         </div>
 
@@ -280,8 +288,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.js"></script>
   <script src="assets/graph-scroll.js"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> 
-
+  <script src="https://code.jquery.com/jquery-3.x-git.slim.min.js"></script> 
 
   <script src="js/chart.js"></script>
   <script src="js/songsChart.js"></script>
