Final touchups before v1.1 release and launch

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
     <div id="top-title">
       <h1 class="half-background">Creo Worship Visualized</h1>
       <h3>Songs, artists, and stats of Creo Worship since 2017</h3>
-      <h5>Scroll down to see more!</h5>
+      <h5>
+        Updated (around) every week
+        <br>
+        Scroll down to see more!
+      </h5>
     </div>
 
     <div class="container" id="container-1">
@@ -279,7 +283,9 @@
     </div>
 
     <div id="bottom-text" class="container">
-      <div>A project by Jordan Chiu.  <a href="https://github.com/jordanmchiu/creo-worship-visualized" target="_blank">Dev Diary</a></div>
+      <div>A project by <a href="https://jordanchiu.ca/" target="_blank">Jordan Chiu</a>.  
+        View the <a href="https://github.com/jordanmchiu/creo-worship-visualized" target="_blank">dev diary for this project here</a>!
+      </div>
       <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
       <div>Based on <a href="https://github.com/1wheel/graph-scroll">graph-scroll</a> by Adam Pearce</div>
     </div>
