--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               </label>
             </p>
           </form>
-          <span class="body-text">* Numbers do not account for spontaneous songs or songs that were cut or changed last-minute.  But one-off events like Team Night, Family Ministries Conference, and Cambodia, are included in "All events".</span>
+          <span class="body-text">* Numbers do not account for spontaneous songs or songs that were cut or changed last-minute.  But one-off events like Team Night, Family Ministries Conference, and Cambodia are included in "All events".</span>
         </div>
 
       </div>
@@ -198,7 +198,7 @@
           <span class="body-text">
             It can be difficult (but not impossible!) to have worship without a worship leader, so it's not surpsising that we've had a leader at 100% of our worship events.
             <br><br>
-            We almost always also have backing vocals, acoustic guitar, keys, drums, and bass as well: about 90% of our worship events have these band members.
+            We almost always have backing vocals, acoustic guitar, keys, drums, and bass as well: about 90% of our worship events have these roles filled.
             <br><br>
             Over three-quarters of our worship sets have someone shredding on the electric!  Less common instruments include strings (cello and violin for more acoustic worship nights) and ukulele, which was popular for Creo Fridays before EXP NGHT started up.
           </span>
@@ -250,7 +250,7 @@
         <div>
           <h5>The Guests</h5>
           <span class="body-text">
-            To date, the following groups have come to guest lead for Creo Worship:
+            To date, these fine folks have come to guest lead for Creo Worship:
             <ul>
               <li>
                 <a href="https://humilityandhunger.com/" target="_blank">
