--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <h3>THE BAND</h3>
           <h5>How often do we have each instrument?</h5>
           <span class="body-text">
-            It can be difficult (but not impossible!) to have worship without a worship leader, so it's not surpsising that we've had a leader at 100% of our worship events.
+            It can be difficult (but not impossible!) to have worship without a worship leader, so it's not surprising that we've had a leader at 100% of our worship events.
             <br><br>
             We almost always have backing vocals, acoustic guitar, keys, drums, and bass as well: about 90% of our worship events have these roles filled.
             <br><br>
