--- a/index.html
+++ b/index.html
@@ -267,6 +267,9 @@
                   Colin Yen
                 </a>
               </li>
+              <li>
+                Andrea Yeung & Alana Klatt
+              </li>
             </ul>
           </span>
         </div>
