Mid-June data update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h1 class="half-background">Creo Worship Visualized</h1>
       <h3>Songs, artists, and stats of Creo Worship since 2017</h3>
       <h5>
-        Updated (around) every week
+        Last updated June 10th, 2020
         <br>
         Scroll down to see more!
       </h5>
@@ -179,7 +179,7 @@
             <br><br>
             With their large catalog of familiar worship songs, the three main Hillsong bands (Worship, UNITED, and Young & Free) all manage to crack the top five once again.
             <br><br>
-            Bethel's right in the mix with 14 different songs sung, and Elevation rounds out the top five with 10 songs, the same number as Young & Free.
+            Bethel's right in the mix with 17 different songs sung, and Elevation rounds out the top five with 10 songs, the same number as Young & Free.
           </span>
         </div>
         
@@ -222,14 +222,14 @@
 
         <div>
           <span class="body-text">
-            We've also played over 130 different songs over the past three years.
+            We've also played nearly 150 different songs over the past three years.
           </span>
         </div>
 
         <div>
           <h5>The Artists</h5>
           <span class="body-text">
-            We've played music from over thirty different artists, including some original songs by Creo Worship!
+            We've played music from almost forty different artists, including some original songs by Creo Worship!
           </span>
         </div>
 
