End of year update

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
           <h3>TOP 10 SONGS OF ALL TIME</h3>
           <h5>By number of times sung</h5>
           <span class="body-text">
-            "Build My Life" by Housefires comes out on top: we've sung it 24 times since September 2017!  "Glorious Day" from Passion isn't far behind with 21 plays.  "Spirit Move" by Bethel rounds out the top 3 with 18 plays.
+            "Build My Life" by Housefires comes out on top: we've sung it 25 times since September 2017!  "Glorious Day" from Passion isn't far behind with 21 plays.  "Spirit Move" by Bethel rounds out the top 3 with 18 plays.
             <br><br>
-            "Good Grace" from Hillsong UNITED manages to crack the top ten with 11 plays - an impressive number given that it's the most recent song on this list: it was released in 2019!
+            "Good Grace" from Hillsong UNITED manages to crack the top ten with 12 plays - an impressive number given that it's the most recent song on this list: it was released in 2019!
           </span> 
         </div>
 
@@ -179,7 +179,7 @@
             <br><br>
             With their large catalog of familiar worship songs, the three main Hillsong bands (Worship, UNITED, and Young & Free) all manage to crack the top five once again.
             <br><br>
-            Bethel's right in the mix with 17 different songs sung, and Elevation rounds out the top five with 10 songs, the same number as Young & Free.
+            Bethel's right in the mix with 17 different songs sung, and Elevation also cracks the top five with 11 songs.
           </span>
         </div>
         
@@ -216,7 +216,7 @@
           <h3>THE TOTALS</h3>
           <h5>The Songs</h5>
           <span class="body-text">
-            Counting all the repeats, we've sung songs over 500 times since 2017!
+            Counting all the repeats, we've sung songs nearly 600 times since 2017!
           </span>
         </div>
 
